# libcreg

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libcreg-wiki.ini  libcreg.ini  libcreg.nuspec  libcreg.pc.in  libcreg.spec.in  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
cregtools/: Makefile.am  cregexport.c  creginfo.c  cregmount.c  cregoutput.c  cregoutput.h  cregtools_getopt.c  cregtools_getopt.h  cregtools_i18n.h  cregtools_libbfio.h  cregtools_libcerror.h  cregtools_libclocale.h  cregtools_libcnotify.h  cregtools_libcpath.h  cregtools_libcreg.h  cregtools_libcstring.h  cregtools_libcsystem.h  cregtools_libfcache.h  cregtools_libfdata.h  cregtools_libfdatetime.h  cregtools_libfguid.h  cregtools_libfwnt.h  cregtools_libfwsi.h  cregtools_libuna.h  cregtools_output.c  cregtools_output.h  cregtools_signal.c  cregtools_signal.h  cregtools_unused.h  export_handle.c  export_handle.h  info_handle.c  info_handle.h  log_handle.c  log_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  (+9 more)
include/: Makefile.am  libcreg.h.in
include/libcreg/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libcreg/: Makefile.am  creg_data_block.h  creg_file_header.h  creg_key_navigation.h  libcreg.c  libcreg.rc.in  libcreg_checksum.c  libcreg_checksum.h  libcreg_codepage.h  libcreg_data_block.c  libcreg_data_block.h  libcreg_data_block_entry.c  libcreg_data_block_entry.h  libcreg_data_type.c  libcreg_data_type.h  libcreg_debug.c  libcreg_debug.h  libcreg_definitions.h.in  libcreg_error.c  libcreg_error.h  libcreg_extern.h  libcreg_file.c  libcreg_file.h  libcreg_io_handle.c  libcreg_io_handle.h  libcreg_key.c  libcreg_key.h  libcreg_key_descriptor.c  libcreg_key_descriptor.h  libcreg_key_hierarchy_entry.c  libcreg_key_hierarchy_entry.h  libcreg_key_item.c  libcreg_key_item.h  libcreg_key_name_entry.c  libcreg_key_name_entry.h  libcreg_key_navigation.c  libcreg_key_navigation.h  libcreg_key_tree.c  libcreg_key_tree.h  libcreg_libbfio.h  (+22 more)
msvscpp/: Makefile.am  libcreg.sln
msvscpp/creg_test_data_block/: creg_test_data_block.vcproj
msvscpp/creg_test_data_block_entry/: creg_test_data_block_entry.vcproj
msvscpp/creg_test_data_type/: creg_test_data_type.vcproj
msvscpp/creg_test_error/: creg_test_error.vcproj
msvscpp/creg_test_file/: creg_test_file.vcproj
msvscpp/creg_test_get_version/: creg_test_get_version.vcproj
msvscpp/creg_test_io_handle/: creg_test_io_handle.vcproj
msvscpp/creg_test_key/: creg_test_key.vcproj
msvscpp/creg_test_key_descriptor/: creg_test_key_descriptor.vcproj
msvscpp/creg_test_key_hierarchy_entry/: creg_test_key_hierarchy_entry.vcproj
msvscpp/creg_test_key_name_entry/: creg_test_key_name_entry.vcproj
msvscpp/creg_test_key_navigation/: creg_test_key_navigation.vcproj
msvscpp/creg_test_notify/: creg_test_notify.vcproj
msvscpp/creg_test_open_close/: creg_test_open_close.vcproj
msvscpp/creg_test_set_ascii_codepage/: creg_test_set_ascii_codepage.vcproj
msvscpp/creg_test_support/: creg_test_support.vcproj
msvscpp/creg_test_tools_info_handle/: creg_test_tools_info_handle.vcproj
msvscpp/creg_test_tools_mount_path_string/: creg_test_tools_mount_path_string.vcproj
msvscpp/creg_test_tools_output/: creg_test_tools_output.vcproj
msvscpp/creg_test_tools_signal/: creg_test_tools_signal.vcproj
msvscpp/creg_test_value/: creg_test_value.vcproj
msvscpp/creg_test_value_entry/: creg_test_value_entry.vcproj
msvscpp/cregexport/: cregexport.vcproj
msvscpp/creginfo/: creginfo.vcproj
msvscpp/cregmount/: cregmount.vcproj
msvscpp/dokan/: dokan.vcproj
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcreg/: libcreg.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfcache/: libfcache.vcproj
msvscpp/libfdata/: libfdata.vcproj
msvscpp/libfdatetime/: libfdatetime.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libfole/: libfole.vcproj
msvscpp/libfwnt/: libfwnt.vcproj
msvscpp/libfwps/: libfwps.vcproj
msvscpp/libfwsi/: libfwsi.vcproj
msvscpp/libuna/: libuna.vcproj
msvscpp/pycreg/: pycreg.vcproj
pycreg/: Makefile.am  pycreg.c  pycreg.h  pycreg_codepage.c  pycreg_codepage.h  pycreg_error.c  pycreg_error.h  pycreg_file.c  pycreg_file.h  pycreg_file_object_io_handle.c  pycreg_file_object_io_handle.h  pycreg_integer.c  pycreg_integer.h  pycreg_key.c  pycreg_key.h  pycreg_keys.c  pycreg_keys.h  pycreg_libbfio.h  pycreg_libcerror.h  pycreg_libclocale.h  pycreg_libcreg.h  pycreg_libcstring.h  pycreg_python.h  pycreg_unused.h  pycreg_value.c  pycreg_value.h  pycreg_value_types.c  pycreg_value_types.h  pycreg_values.c  pycreg_values.h
pycreg-python3/: Makefile.am
tests/: Makefile.am  creg_test_data_block.c  creg_test_data_block_entry.c  creg_test_data_type.c  creg_test_error.c  creg_test_file.c  creg_test_functions.c  creg_test_functions.h  creg_test_get_version.c  creg_test_getopt.c  creg_test_getopt.h  creg_test_io_handle.c  creg_test_key.c  creg_test_key_descriptor.c  creg_test_key_hierarchy_entry.c  creg_test_key_name_entry.c  creg_test_key_navigation.c  creg_test_libbfio.h  creg_test_libcerror.h  creg_test_libclocale.h  creg_test_libcnotify.h  creg_test_libcpath.h  creg_test_libcreg.h  creg_test_libcstring.h  creg_test_libcsystem.h  creg_test_libuna.h  creg_test_macros.h  creg_test_memory.c  creg_test_memory.h  creg_test_notify.c  creg_test_open_close.c  creg_test_set_ascii_codepage.c  creg_test_support.c  creg_test_tools_info_handle.c  creg_test_tools_mount_path_string.c  creg_test_tools_output.c  creg_test_tools_signal.c  creg_test_unused.h  creg_test_value.c  creg_test_value_entry.c  (+22 more)
(+32 files in other folders)
