include_HEADERS = \
	libcreg.h

pkginclude_HEADERS = \
	libcreg/codepage.h \
	libcreg/definitions.h \
	libcreg/error.h \
	libcreg/extern.h \
	libcreg/features.h \
	libcreg/types.h

EXTRA_DIST = \
	libcreg.h.in \
	libcreg/definitions.h.in \
	libcreg/features.h.in \
	libcreg/types.h.in

DISTCLEANFILES = \
	libcreg.h \
	libcreg/definitions.h \
	libcreg/features.h \
	libcreg/types.h \
	Makefile \
	Makefile.in

