MSVSCPP_FILES = \
	creg_test_error/creg_test_error.vcproj \
	creg_test_get_version/creg_test_get_version.vcproj \
	creg_test_open_close/creg_test_open_close.vcproj \
	creg_test_set_ascii_codepage/creg_test_set_ascii_codepage.vcproj \
	cregexport/cregexport.vcproj \
	creginfo/creginfo.vcproj \
	cregmount/cregmount.vcproj \
	dokan/dokan.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcreg/libcreg.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfole/libfole.vcproj \
	libfwnt/libfwnt.vcproj \
	libfwps/libfwps.vcproj \
	libfwsi/libfwsi.vcproj \
	libuna/libuna.vcproj \
	pycreg/pycreg.vcproj \
	libcreg.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

