MSVSCPP_FILES = \
	creg_test_error/creg_test_error.vcproj \
	creg_test_file/creg_test_file.vcproj \
	creg_test_key/creg_test_key.vcproj \
	creg_test_notify/creg_test_notify.vcproj \
	creg_test_open_close/creg_test_open_close.vcproj \
	creg_test_support/creg_test_support.vcproj \
	creg_test_value/creg_test_value.vcproj \
	cregexport/cregexport.vcproj \
	creginfo/creginfo.vcproj \
	cregmount/cregmount.vcproj \
	dokan/dokan.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcreg/libcreg.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfole/libfole.vcproj \
	libfwnt/libfwnt.vcproj \
	libfwps/libfwps.vcproj \
	libfwsi/libfwsi.vcproj \
	libuna/libuna.vcproj \
	pycreg/pycreg.vcproj \
	libcreg.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

