MSVSCPP_FILES = \
	creg_test_data_block/creg_test_data_block.vcproj \
	creg_test_data_type/creg_test_data_type.vcproj \
	creg_test_error/creg_test_error.vcproj \
	creg_test_file/creg_test_file.vcproj \
	creg_test_io_handle/creg_test_io_handle.vcproj \
	creg_test_key/creg_test_key.vcproj \
	creg_test_key_descriptor/creg_test_key_descriptor.vcproj \
	creg_test_key_hierarchy_entry/creg_test_key_hierarchy_entry.vcproj \
	creg_test_key_name_entry/creg_test_key_name_entry.vcproj \
	creg_test_key_navigation/creg_test_key_navigation.vcproj \
	creg_test_notify/creg_test_notify.vcproj \
	creg_test_support/creg_test_support.vcproj \
	creg_test_tools_info_handle/creg_test_tools_info_handle.vcproj \
	creg_test_tools_output/creg_test_tools_output.vcproj \
	creg_test_tools_signal/creg_test_tools_signal.vcproj \
	creg_test_value/creg_test_value.vcproj \
	creg_test_value_entry/creg_test_value_entry.vcproj \
	cregexport/cregexport.vcproj \
	creginfo/creginfo.vcproj \
	cregmount/cregmount.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcreg/libcreg.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libuna/libuna.vcproj \
	pycreg/pycreg.vcproj \
	libcreg.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

